    asking the NN on heartbeat messages (cmccabe)

    HDFS-4185. Add a metric for number of active leases.
    (Rakesh R via raviprak)

    HDFS-8983. NameNode support for protected directories. (Arpit Agarwal)

    HDFS-8046. Allow better control of getContentSummary (kihwal)

    HDFS-8797. WebHdfsFileSystem creates too many connections for pread. (jing9)

  OPTIMIZATIONS

    HDFS-8856. Make LeaseManager#countPath O(1). (Arpit Agarwal)

  BUG FIXES

    HDFS-7701. Support reporting per storage type quota and usage
    with hadoop/hdfs shell. (Peter Shi via Arpit Agarwal)

    HDFS-8055. NullPointerException when topology script is missing.
    (Anu Engineer via cnauroth)

    HDFS-7645. Rolling upgrade is restoring blocks from trash multiple times.
    (Vinayakumar B and Keisuke Ogiwara via Arpit Agarwal)

    HDFS-8211. DataNode UUID is always null in the JMX counter. (Anu Engineer
    via Arpit Agarwal)

    HDFS-8205. CommandFormat#parse() should not parse option as
    value of option. (Peter Shi and Xiaoyu Yao via Arpit Agarwal)

    HDFS-8232. Missing datanode counters when using Metrics2 sink interface.
    (Anu Engineer via cnauroth)

    HDFS-8219. setStoragePolicy with folder behavior is different after cluster restart.
    (surendra singh lilhore via Xiaoyu Yao)

    HDFS-8144. Split TestLazyPersistFiles into multiple tests. (Arpit Agarwal)

    HDFS-8152. Refactoring of lazy persist storage cases. (Arpit Agarwal)

    HDFS-8276. LazyPersistFileScrubber should be disabled if scrubber interval
    configured zero. (Surendra Singh Lilhore via Arpit Agarwal)

    HDFS-8229. LAZY_PERSIST file gets deleted after NameNode restart.
    (Surendra Singh Lilhore via Arpit Agarwal)

    HDFS-8309. Skip unit test using DataNodeTestUtils#injectDataDirFailure() on Windows.
    (xyao)

    HDFS-7609. Avoid retry cache collision when Standby NameNode loading edits.
    (Ming Ma via jing9)

    HDFS-8431. hdfs crypto class not found in Windows.